// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query sites SITES parametrized query returns expected result 1`] = `
Object {
  "sites": Array [
    Object {
      "env": "hyundaicoupeclub",
      "migrated": Array [
        "PhpBb_migration",
        "entity_titles_mapping_migration",
      ],
      "retroactive": true,
      "sitename": "hyundaicoupeclub.co.uk",
      "source": true,
    },
  ],
}
`;

exports[`Query sites SITES query returns expected result 1`] = `
Object {
  "sites": Array [
    Object {
      "env": "crxcommunity",
      "migrated": Array [],
      "sitename": "crxcommunity.com",
      "source": false,
    },
    Object {
      "env": "hyundaicoupeclub",
      "migrated": Array [
        "PhpBb_migration",
        "entity_titles_mapping_migration",
      ],
      "sitename": "hyundaicoupeclub.co.uk",
      "source": true,
    },
  ],
}
`;

exports[`Query sites query missing entities 1`] = `
Object {
  "missingEntities": null,
}
`;
